--- a/main.css
+++ b/main.css
@@ -1,6 +1,12 @@
 body {
 	margin: none;
 	font-family: sans-serif;
+	transition: background 1s ease-in-out;
+	transition: background 1s ease-in;
+	transition: background 1s ease-out;
+	transition: background 1s ease;
+	transition: background 1s linear;
+
 }
 .wrapper {
 	margin: auto;
