Add english name to data being presented

--- a/main.css
+++ b/main.css
@@ -7,10 +7,13 @@ body {
 	transition: background 1s ease;
 	transition: background 1s linear;
 }
+h1, h2 {
+	margin: 2em 0;
+}
 .wrapper {
     position: relative;
 	margin: auto;
-	max-width: 50vw;
+	max-width: 70vw;
 	height: 100vh;
 }
 .hidden {
@@ -21,5 +24,7 @@ body {
 	position: absolute;
 	transition: opacity 1s linear;
 }
-
+.x {
+	z-index: 10;
+}
 
