--- a/main.css
+++ b/main.css
@@ -1,25 +1,50 @@
 body {
-	margin: none;
-	font-family: sans-serif;
-	transition: background 1s ease-in-out;
-	transition: background 1s ease-in;
-	transition: background 1s ease-out;
-	transition: background 1s ease;
+	padding: 0;
+	margin: 0;
+	font-family: Lato,Helvetica,Arial,sans-serif;
 	transition: background 1s linear;
+	padding: 5em 0;
+
 }
 h1, h2 {
-	margin: 2em 0;
+	margin: 2rem 0;
+}
+
+.row {
+	height: auto;
+	width: 100%;
+	transition: background 1s linear;
+	background: #333;
+	background-size: 300px;
+ 	background-repeat: no-repeat;
 }
 .wrapper {
-    position: relative;
+	display: flex;
+	padding: 0.5em 0;
 	margin: auto;
 	max-width: 70vw;
-	height: 100vh;
+	height: 70vh;
+	color: #fff;
+}
+#flag {
+    margin-top: 10%;
+	min-height: 100px;
+	height: auto;
+	width: 50%;
+	background-size: 300px;
+	background-size: contain; 
+ 	background-repeat: no-repeat;
+}
+.data{
+	height: 100%;
+	width: 50%;
 }
 .hidden {
 	opacity: 0;
 }
-
+.inline {
+	display: inline;
+}
 .x, .y{
 	position: absolute;
 	transition: opacity 1s linear;
@@ -27,4 +52,3 @@ h1, h2 {
 .x {
 	z-index: 10;
 }
-
